syntax = "proto3";

package publication.management.book;

service BookService {
  rpc PublishBook(Book) returns (Response) {}
  rpc GetPublishedBooks(GetRequest) returns (Response) {}
}

message Book {
  string id = 1;
  string title = 2;
  string category = 3;
  string language = 4;
  int32 pages = 5;
  string author_id = 6;
  string publisher_id = 7;
  int32 copies = 8;
}

message GetRequest {}

message Response {
  bool registered = 1;
  Book book = 2;
  string publisher_id = 3;
  repeated Book books = 4;
}
